<?xml version="1.0"?>
<package format="2">
  <name>autonomous_nav_gui</name>
  <version>0.0.0</version>
  <description>The autonomous_nav_gui package</description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">jeremie</maintainer>

  <license>BDS</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
